Fix text alignment on code-reveal (#87)
* Start of dropdown element

* Continue work on dropdown menu

* Added .disabled state to dropdown menu
Added element to index.html

* Final for dropdown

* Minor update

* Fix typo in main.scss

* Start work on grid system.

* Completed grid layout

* Add innovative element - drop-dot
Made some small fixes on .list-groups

* Add scrollspy to index.
Fix up the grid example color. Set to $primary-color

* Add scrollspy.js file
Fix issue with scrollspy on index.html

* Added a code-reveal element to show/hide sample code for the elements.
Add prism.js to the project for code highlighting.
Move code samples that were already present into a code-reveal element.

* Add files missed on last push/PR

* Removed temp file

* Add code samples to my elements
Fixed some color issues up
Added rules and variables for <a> elements

* Added new name: Phoenix UI
Created/added favicon
Created/added logo on header.

* Add sticky sidebar functionality
Adjusted layout etc to allow for sticky sidebar.

* Completed sticky sidebar
Add Scrollspy to sidebar and targets.
Needs some tweaking

* Fixed some minor issues with Scrollspy and index.html

* Added slow scroll to keep sidebar elements on screen.

* Fix text alignment on button section's code reveal.

--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -87,6 +87,15 @@ section{
   }
 }
 
+.section-button {
+  text-align: center;
+  margin-top: 5rem;
+
+  .code-reveal{
+    text-align: left;
+  }
+}
+
 .list-group-example{
   
   .list-group{
